# sample-native-module

./: .gitignore  README.md
Android/: README.md
Android/CalcLib/: .cproject  .gitignore  .project  AndroidManifest.xml
Android/CalcLib/jni/: Android.mk  Application.mk  Calc.cpp
Android/CalcLib/jni/include/: v8-debug.h  v8-experimental.h  v8-platform.h  v8-profiler.h  v8-testing.h  v8-util.h  v8-version.h  v8.h  v8config.h
Android/CalcLib/jni/include/libplatform/: libplatform.h
MyCalcLib/: build.gradle
MyCalcLib/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
MyCalcLib/app/src/main/: AndroidManifest.xml
MyCalcLib/app/src/main/cpp/: Calc.cpp
MyCalcLib/app/src/main/res/values/: strings.xml
MyCalcLib/gradle/wrapper/: gradle-wrapper.properties
calclib/: build.gradle  local.properties  proguard-rules.pro
calclib/src/main/: AndroidManifest.xml
calclib/src/main/cpp/: Calc.cpp
calclib/src/main/res/values/: strings.xml
